charts/rclone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rclone
  namespace: core
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - host: rclone.batsworks.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rclone
                port:
                  number: 5572
  tls:
    - hosts:
        - rclone.batsworks.com.br
      secretName: tls-rclone
